storage/connect/ha_connect.cc
@@ -171,9 +171,9 @@
 #define JSONMAX      10             // JSON Default max grp size
 
 extern "C" {
-       char version[]= "Version 1.04.0006 May 08, 2016";
+       char version[]= "Version 1.04.0008 August 10, 2016";
 #if defined(__WIN__)
-       char compver[]= "Version 1.04.0006 " __DATE__ " "  __TIME__;
+       char compver[]= "Version 1.04.0008 " __DATE__ " "  __TIME__;
        char slash= '\\';
 #else   // !__WIN__
        char slash= '/';
@@ -6935,7 +6935,7 @@ maria_declare_plugin(connect)
   0x0104,                                       /* version number (1.04) */
   NULL,                                         /* status variables */
   connect_system_variables,                     /* system variables */
-  "1.04.0006",                                  /* string version */
+  "1.04.0008",                                  /* string version */
   MariaDB_PLUGIN_MATURITY_GAMMA                 /* maturity */
 }
 maria_declare_plugin_end;
